// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionList /> should render with all available passed in props 1`] = `
<div
  className="css-n5bgog"
>
  <div
    className="css-n34rpg"
  >
    <div
      className="css-1h6g3aq"
    >
      Arguments
    </div>
    <div
      className="css-1fcz6ig"
    >
      <div
        className="css-jxhuyt"
      >
        <div
          className="css-p5jona"
        >
          align-content
        </div>
        <div
          className="css-xurkgk"
        >
          required
        </div>
        <div
          className="css-14spoyu"
        >
          string
        </div>
      </div>
      <p
        className="css-1gks27d"
      >
        <span>
          The reason given for the 
          <a
            href="#"
          >
            cancellation
          </a>
           by the member support employee.
           
        </span>
        <span>
          The default value is
           
          <code
            className="css-eypjzh"
          >
            stretch
          </code>
          .
        </span>
        <span>
           Possible values are 
        </span>
        <span
          className="css-p5d22a"
        >
          <span>
            <code
              className="css-eypjzh"
            >
              stretch
            </code>
          </span>
          <span>
            <code
              className="css-eypjzh"
            >
              start
            </code>
          </span>
          <span>
            <code
              className="css-eypjzh"
            >
              end
            </code>
          </span>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<OptionList /> should render with minimum requirements 1`] = `
<div
  className="css-n5bgog"
>
  <div
    className="css-n34rpg"
  >
    <div
      className="css-1sb2enk"
    >
      Options
    </div>
    <div
      className="css-1fcz6ig"
    >
      <div
        className="css-jxhuyt"
      >
        <div
          className="css-p5jona"
        >
          align-content
        </div>
        <div
          className="css-uua7zr"
        >
          optional
        </div>
        <div
          className="css-14spoyu"
        >
          string
        </div>
      </div>
      <p
        className="css-1gks27d"
      >
        <span>
           
        </span>
      </p>
    </div>
  </div>
</div>
`;
